[Mac] PasteboardMac.mm build fails https://bugs.webkit.org/show_bug.cgi?id=78655

Reviewed by Hajime Morita.

Although the bots have been working fine, PasteboardMac.mm build fails
in our local Mac environments due to an uninitialized variable:

    /Users/haraken/WebKit/Source/WebCore/platform/mac/PasteboardMac.mm:322: warning: 'string' may be used uninitialized in this function

This patch initializes the 'string' to nil to fix the build failure.

No tests. No change in behavior.

* platform/mac/PasteboardMac.mm:
(WebCore::Pasteboard::plainText):


Canonical link: https://commits.webkit.org/95613@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107770 268f45cc-cd09-0410-ab3c-d52691b4dbfc